Remove pv_refernce_device flag in run_model

--- a/docs/sphinx/source/modelchain.ipynb
+++ b/docs/sphinx/source/modelchain.ipynb
@@ -411,9 +411,9 @@
       "\u001b[0;31m---------------------------------------------------------------------------\u001b[0m",
       "\u001b[0;31mTypeError\u001b[0m                                 Traceback (most recent call last)",
       "\u001b[0;32m<ipython-input-11-669fff3a00c3>\u001b[0m in \u001b[0;36m<module>\u001b[0;34m()\u001b[0m\n\u001b[0;32m----> 1\u001b[0;31m \u001b[0mmc\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0mrun_model\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0mtimes\u001b[0m\u001b[0;34m=\u001b[0m\u001b[0mweather\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0mindex\u001b[0m\u001b[0;34m,\u001b[0m \u001b[0mweather\u001b[0m\u001b[0;34m=\u001b[0m\u001b[0mweather\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0m",
-      "\u001b[0;32m~/Documents/IMS/SolarPV/PVfit/pvlib-python/pvlib/modelchain.py\u001b[0m in \u001b[0;36mrun_model\u001b[0;34m(self, times, weather, pv_ref_device)\u001b[0m\n\u001b[1;32m    848\u001b[0m             \u001b[0mself\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0meffective_irradiance_model\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[1;32m    849\u001b[0m             \u001b[0mself\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0mtemp_model\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0;32m--> 850\u001b[0;31m         \u001b[0mself\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0mdc_model\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0m\u001b[1;32m    851\u001b[0m         \u001b[0mself\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0mac_model\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[1;32m    852\u001b[0m         \u001b[0mself\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0mlosses_model\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n",
+      "\u001b[0;32m~/Documents/IMS/SolarPV/PVfit/pvlib-python/pvlib/modelchain.py\u001b[0m in \u001b[0;36mrun_model\u001b[0;34m(self, times, weather)\u001b[0m\n\u001b[1;32m    860\u001b[0m             \u001b[0mself\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0meffective_irradiance_model\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[1;32m    861\u001b[0m             \u001b[0mself\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0mtemp_model\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0;32m--> 862\u001b[0;31m         \u001b[0mself\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0mdc_model\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0m\u001b[1;32m    863\u001b[0m         \u001b[0mself\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0mac_model\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[1;32m    864\u001b[0m         \u001b[0mself\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0mlosses_model\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n",
       "\u001b[0;32m~/Documents/IMS/SolarPV/PVfit/pvlib-python/pvlib/modelchain.py\u001b[0m in \u001b[0;36msinglediode\u001b[0;34m(self)\u001b[0m\n\u001b[1;32m    401\u001b[0m          \u001b[0mresistance_shunt\u001b[0m\u001b[0;34m,\u001b[0m \u001b[0mnNsVth\u001b[0m\u001b[0;34m)\u001b[0m \u001b[0;34m=\u001b[0m \u001b[0;34m(\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[1;32m    402\u001b[0m             self.system.calcparams_desoto(self.effective_irradiance,\n\u001b[0;32m--> 403\u001b[0;31m                                           self.temps['temp_cell']))\n\u001b[0m\u001b[1;32m    404\u001b[0m \u001b[0;34m\u001b[0m\u001b[0m\n\u001b[1;32m    405\u001b[0m         self.desoto = (photocurrent, saturation_current, resistance_series,\n",
-      "\u001b[0;32m~/Documents/IMS/SolarPV/PVfit/pvlib-python/pvlib/pvsystem.py\u001b[0m in \u001b[0;36mcalcparams_desoto\u001b[0;34m(self, effective_irradiance, temp_cell)\u001b[0m\n\u001b[1;32m    304\u001b[0m                                self.module_parameters)\n\u001b[1;32m    305\u001b[0m \u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0;32m--> 306\u001b[0;31m         \u001b[0;32mreturn\u001b[0m \u001b[0mcalcparams_desoto\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0meffective_irradiance\u001b[0m\u001b[0;34m,\u001b[0m \u001b[0mtemp_cell\u001b[0m\u001b[0;34m,\u001b[0m \u001b[0;34m**\u001b[0m\u001b[0mkwargs\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0m\u001b[1;32m    307\u001b[0m \u001b[0;34m\u001b[0m\u001b[0m\n\u001b[1;32m    308\u001b[0m     \u001b[0;32mdef\u001b[0m \u001b[0msapm\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0mself\u001b[0m\u001b[0;34m,\u001b[0m \u001b[0meffective_irradiance\u001b[0m\u001b[0;34m,\u001b[0m \u001b[0mtemp_cell\u001b[0m\u001b[0;34m,\u001b[0m \u001b[0;34m**\u001b[0m\u001b[0mkwargs\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m:\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n",
+      "\u001b[0;32m~/Documents/IMS/SolarPV/PVfit/pvlib-python/pvlib/pvsystem.py\u001b[0m in \u001b[0;36mcalcparams_desoto\u001b[0;34m(self, effective_irradiance, temp_cell)\u001b[0m\n\u001b[1;32m    304\u001b[0m                                self.module_parameters)\n\u001b[1;32m    305\u001b[0m \u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0;32m--> 306\u001b[0;31m         \u001b[0;32mreturn\u001b[0m \u001b[0mcalcparams_desoto\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0meffective_irradiance\u001b[0m\u001b[0;34m,\u001b[0m \u001b[0mtemp_cell\u001b[0m\u001b[0;34m,\u001b[0m \u001b[0;34m**\u001b[0m\u001b[0mkwargs\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0m\u001b[1;32m    307\u001b[0m \u001b[0;34m\u001b[0m\u001b[0m\n\u001b[1;32m    308\u001b[0m     \u001b[0;32mdef\u001b[0m \u001b[0msapm\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0mself\u001b[0m\u001b[0;34m,\u001b[0m \u001b[0meffective_irradiance\u001b[0m\u001b[0;34m,\u001b[0m \u001b[0mtemp_cell\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m:\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n",
       "\u001b[0;31mTypeError\u001b[0m: calcparams_desoto() missing 6 required positional arguments: 'alpha_sc', 'a_ref', 'I_L_ref', 'I_o_ref', 'R_sh_ref', and 'R_s'"
      ]
     }
@@ -674,45 +674,57 @@
      "text": [
       "In file: /home/campy/Documents/IMS/SolarPV/PVfit/pvlib-python/pvlib/modelchain.py\n",
       "\n",
-      "    def run_model(self, times=None, weather=None, pv_ref_device=False):\n",
+      "    def run_model(self, times=None, weather=None):\n",
       "        \"\"\"\n",
       "        Run the model.\n",
       "\n",
       "        Parameters\n",
       "        ----------\n",
       "        times : None or DatetimeIndex, default None\n",
-      "            Times at which to evaluate the model. Can be None if\n",
-      "            attribute `times` is already set.\n",
+      "            Times at which to evaluate the model. Can be None if attribute\n",
+      "            `times` is already set.\n",
       "        weather : None or DataFrame, default None\n",
-      "            If None, assumes air temperature is 20 C, wind speed is 0\n",
-      "            m/s and irradiation calculated from clear sky data. Column\n",
-      "            names must be 'wind_speed', 'temp_air', 'dni', 'ghi', 'dhi'.\n",
-      "            Do not pass incomplete irradiation data. Use method\n",
-      "            :py:meth:`~pvlib.modelchain.ModelChain.complete_irradiance`\n",
-      "            instead.\n",
-      "        pv_ref_device : Boolean, default False\n",
-      "            If True, then the weather data are from a PV reference device as\n",
-      "            effective irradiance ratio F and effective temperature ratio H,\n",
-      "            see :py:meth:`~pvlib.pvsystem.sdm_campanelli`.\n",
-      "            If False, then traditional meteorological weather data are\n",
-      "            provided.\n",
+      "            If None, assumes air temperature is 20 C, wind speed is 0 m/s and\n",
+      "            irradiation calculated from clear sky data.\n",
+      "            For conventional weather data, column names must be 'wind_speed',\n",
+      "            'temp_air', 'dni', 'ghi', 'dhi'. Do not pass incomplete irradiation\n",
+      "            data, instead use method\n",
+      "            :py:meth:`~pvlib.modelchain.ModelChain.complete_irradiance`.\n",
+      "            For complete PV reference device data, column names must be 'F' and\n",
+      "            'H', for effective irradiance ratio and effective temperature\n",
+      "            ratio, respectively. See :py:func:`~pvlib.pvsystem.sdm_campanelli`.\n",
+      "            If either 'F' or 'H' is missing, then convential weather data are\n",
+      "            also required to compute the missing 'F' or 'H'.\n",
       "\n",
       "        Returns\n",
       "        -------\n",
       "        self\n",
       "\n",
-      "        Assigns attributes: times, solar_position, airmass, irradiance,\n",
-      "        total_irrad, effective_irradiance, weather, temps, aoi,\n",
-      "        aoi_modifier, spectral_modifier, dc, ac, losses.\n",
+      "        For conventional weather data, assigns attributes: times,\n",
+      "        solar_position, airmass, irradiance, total_irrad, effective_irradiance,\n",
+      "        weather, temps, aoi, aoi_modifier, spectral_modifier, dc, ac, losses.\n",
+      "        For complete reference device data, only assigns attributes: times, dc,\n",
+      "        ac, losses.\n",
       "        \"\"\"\n",
       "\n",
-      "        # TODO Should we be able to specify only one of F and H?\n",
-      "        if pv_ref_device:\n",
-      "            # a PV reference provides \"direct\" weather information\n",
+      "        if 'F' in weather:\n",
+      "            # Use PV reference device weather information for F\n",
       "            self.F = weather['F']\n",
+      "        else:\n",
+      "            # Clear any stale value\n",
+      "            if hasattr(self, 'F'):\n",
+      "                print('F cleared')\n",
+      "                del self.F\n",
+      "        if 'H' in weather:\n",
+      "            # Use PV reference device weather information for H\n",
       "            self.H = weather['H']\n",
       "        else:\n",
-      "            # Use traditional meterological weather information\n",
+      "            # Clear any stale value\n",
+      "            if hasattr(self, 'H'):\n",
+      "                print('H cleared')\n",
+      "                del self.H\n",
+      "        if 'F' not in weather and 'H' not in weather:\n",
+      "            # Use conventional (meterological) weather information\n",
       "            self.prepare_inputs(times, weather)\n",
       "            self.aoi_model()\n",
       "            self.spectral_model()\n",
@@ -1200,7 +1212,7 @@
    "source": [
     "### Model wrapper for use with matched reference device effective irradiance and cell temperature\n",
     "\n",
-    "In this scenario, a reference device (typically a \"matched\" cell or module) provides the effecitive irradiance ratio `F` and effective temperature ratio `H`, which serves directly as the \"weather\" under which the device operates."
+    "In this scenario, a reference device (typically a \"matched\" cell or module) provides the effecitive irradiance ratio `F` and effective temperature ratio `H`, which serves directly as the \"weather\" under which the device operates. The `F` and `H` are stored in the `ModelChain` object for further inspection and are cleared on subsequent model runs."
    ]
   },
   {
@@ -1212,14 +1224,14 @@
      "data": {
       "text/plain": [
        "ModelChain: \n",
-       "  name: Campanelli\n",
+       "  name: Campanelli with PV Reference Device\n",
        "  orientation_strategy: None\n",
        "  clearsky_model: ineichen\n",
        "  transposition_model: haydavies\n",
        "  solar_position_method: nrel_numpy\n",
        "  airmass_model: kastenyoung1989\n",
-       "  dc_model: functools.partial(<function sdm_campanelli at 0x7f6fc08cb7b8>, ModelChain: \n",
-       "  name: Campanelli\n",
+       "  dc_model: functools.partial(<function sdm_campanelli at 0x7f83471d07b8>, ModelChain: \n",
+       "  name: Campanelli with PV Reference Device\n",
        "  orientation_strategy: None\n",
        "  clearsky_model: ineichen\n",
        "  transposition_model: haydavies\n",
@@ -1253,9 +1265,10 @@
     "weather_F_H = pd.DataFrame([[1.07754787, 1.084]], \n",
     "                           columns=['F', 'H',], \n",
     "                           index=[pd.Timestamp('20170401 1200', tz='US/Arizona')])\n",
-    "mc_campanelli = ModelChain(system_campanelli, location, dc_model=sdm_campanelli, name=\"Campanelli\",\n",
+    "mc_campanelli = ModelChain(system_campanelli, location, dc_model=sdm_campanelli,\n",
+    "                           name=\"Campanelli with PV Reference Device\",\n",
     "                           aoi_model='no_loss', spectral_model='no_loss')\n",
-    "mc_campanelli.run_model(times=weather_F_H.index, weather=weather_F_H, pv_ref_device=True)"
+    "mc_campanelli.run_model(weather=weather_F_H)"
    ]
   },
   {
@@ -1353,7 +1366,9 @@
     "### Model wrapper for use with SAPM effective irradiance and cell temperature\n",
     "\n",
     "When traditional weather data are available (e.g., from a meterological station), use the SAPM to compute the effecitive irradiance ratio `F` and effective temperature ratio `H`. Among other things, this relies on the\n",
-    "accuracy of the short-circuit temperature coefficient under the operating conditions of the given location. This computation uses the `Aisc` provided by the SAPM, and in practice, one tries to match as best as possible the module at hand with a module in the SAPM database."
+    "accuracy of the short-circuit temperature coefficient under the operating conditions of the given location. This computation uses the `Aisc` provided by the SAPM, and in practice, one tries to match as best as possible the module at hand with a module in the SAPM database.\n",
+    "\n",
+    "Note that if either `F` or `H` is provided (but not both), then the SAPM will be used to compute the missing one."
    ]
   },
   {
@@ -1365,14 +1380,14 @@
      "data": {
       "text/plain": [
        "ModelChain: \n",
-       "  name: Campanelli\n",
+       "  name: Campanelli with SAPM\n",
        "  orientation_strategy: None\n",
        "  clearsky_model: ineichen\n",
        "  transposition_model: haydavies\n",
        "  solar_position_method: nrel_numpy\n",
        "  airmass_model: kastenyoung1989\n",
-       "  dc_model: functools.partial(<function sdm_campanelli_sapm at 0x7f6fc08d2f28>, ModelChain: \n",
-       "  name: Campanelli\n",
+       "  dc_model: functools.partial(<function sdm_campanelli at 0x7f83471d07b8>, ModelChain: \n",
+       "  name: Campanelli with SAPM\n",
        "  orientation_strategy: None\n",
        "  clearsky_model: ineichen\n",
        "  transposition_model: haydavies\n",
@@ -1397,8 +1412,6 @@
     }
    ],
    "source": [
-    "from pvlib.modelchain import sdm_campanelli_sapm\n",
-    "\n",
     "module_params_campanelli_sapm = {**module_params_campanelli, **sandia_module.to_dict()}\n",
     "module_params_campanelli_sapm['irrad_ref'] = 1000.  # W/m^2\n",
     "module_params_campanelli_sapm['temp_ref'] = 25.  # degC\n",
@@ -1407,8 +1420,9 @@
     "system_campanelli_sapm = PVSystem(surface_tilt=20, surface_azimuth=200,\n",
     "                                  module_parameters=module_params_campanelli_sapm,\n",
     "                                  inverter_parameters=cec_inverter)\n",
-    "mc_campanelli = ModelChain(system_campanelli_sapm, location, dc_model=sdm_campanelli_sapm, name=\"Campanelli\")\n",
-    "# Run using the \"traditional\" weather data from above\n",
+    "mc_campanelli = ModelChain(system_campanelli_sapm, location, dc_model=sdm_campanelli,\n",
+    "                           name=\"Campanelli with SAPM\")\n",
+    "# Run using the conventional weather data from above\n",
     "mc_campanelli.run_model(times=weather.index, weather=weather)"
    ]
   },
@@ -1498,13 +1512,6 @@
    "source": [
     "mc_campanelli.ac"
    ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": []
   }
  ],
  "metadata": {
