--- a/paper/paper.bib
+++ b/paper/paper.bib
@@ -1,8 +1,8 @@
 @inproceedings{Andrews2014,
-	Author = {Robert W. Andrews and Joshua S. Stein and Clifford Hansen and Daniel Riley},
-	Booktitle = {40th IEEE Photovoltaic Specialists Conference},
-	Publisher = {IEEE},
-	Title = {Introduction to the Open Source {PV LIB} for {Python} {P}hotovoltaic System Modelling Package},
+	Author = {R. W. Andrews and J. S. Stein and C. Hansen and D. Riley},
+	Booktitle = {2014 IEEE 40th Photovoltaic Specialist Conference (PVSC)},
+	doi = {10.1109/PVSC.2014.6925501},
+	Title = {Introduction to the open source PV LIB for python Photovoltaic system modelling package},
 	Year = {2014}}
 
 @online{DOESF2,
@@ -15,68 +15,72 @@
 @article{Gagne2017,
 	Author = {Gagne II, David John and McGovern, Amy and Haupt, Sue Ellen and Williams, John K.},
 	Journal = {Solar Energy},
-	Month = {7},
-	Pages = {383--393},
+	Pages = {383- 393},
+	doi = {10.1016/j.solener.2017.04.031},
 	Title = {Evaluation of statistical learning configurations for gridded solar irradiance forecasting},
 	Volume = {150},
 	Year = {2017}}
 
 @inproceedings{Holmgren2015,
-	Author = {William F. Holmgren and Robert W. Andrews and Antonio T. Lorenzo and Joshua S. Stein},
-	Booktitle = {42nd IEEE Photovoltaic Specialists Conference},
-	Publisher = {IEEE},
+	Author = {W. F. Holmgren and R. W. Andrews and A. T. Lorenzo and J. S. Stein},
+	Booktitle = {2015 IEEE 42nd Photovoltaic Specialist Conference (PVSC)},
+	Month = {June},
+	Pages = {1-5},
 	Title = {PVLIB Python 2015},
-	Year = {2015}}
+	Year = {2015},
+	doi = {10.1109/PVSC.2015.7356005}}
 
 @inproceedings{Holmgren2016,
-	Author = {William F. Holmgren and Derek G. Groenendyk},
-	Booktitle = {43rd IEEE Photovoltaic Specialists Conference},
-	Publisher = {IEEE},
-	Title = {An Open Source Solar Power Forecasting Tool Using PVLIB Python},
-	Year = {2016}}
+	Author = {W. F. Holmgren and D. G. Groenendyk},
+	Booktitle = {2016 IEEE 43rd Photovoltaic Specialists Conference (PVSC)},
+	Month = {June},
+	Pages = {0972-0975},
+	Title = {An open source solar power forecasting tool using PVLIB-Python},
+	Year = {2016},
+	doi = {10.1109/PVSC.2016.7749755}}
 
 @inproceedings{Holmgren2017,
 	Author = {William F. Holmgren and Antonio T. Lorenzo and Clifford Hansen},
-	Booktitle = {44th IEEE Photovoltaic Specialists Conference},
-	Publisher = {IEEE},
+	Booktitle = {2017 IEEE 44th Photovoltaic Specialists Conference},
 	Title = {A Comparison of PV Power Forecasts Using PVLib-Python},
 	Year = {2017}}
 
 @inproceedings{Holmgren2018,
 	Author = {William F. Holmgren and Clifford W. Hansen and Joshua S. Stein and Mark A. Mikofski},
-	Booktitle = {45th IEEE Photovoltaic Specialists Conference},
-	Publisher = {IEEE},
+	Booktitle = {2018 IEEE 45th Photovoltaic Specialists Conference},
 	Title = {Review of open source tools for PV modeling},
 	Year = {2018}}
 
 @article{Louwen2017,
-	Author = {Atse Louwen, Ruud E. I. Schropp, Wilfried G. J. H. M. van Sark, Andre P. C. Faaij},
- 	Journal = {Solar Energy},
+	Author = {Atse Louwen and Ruud E.I. Schropp and Wilfried G.J.H.M. van Sark and Andr{\'e} P.C. Faaij},
+	Journal = {Solar Energy},
+	Pages = {1339 - 1353},
 	Title = {Geospatial analysis of the energy yield and environmental footprint of different photovoltaic module technologies},
-	Year = {2017}}
-
-@inproceedings{Mikofski2017,
-	Author = {Mark A. Mikofski and Clifford W. Hansen and William F. Holmgren and Gregory M. Kimball},
-	Booktitle = {44th IEEE Photovoltaic Specialists Conference},
-	Publisher = {IEEE},
-	Title = {Use of Measured Aerosol Optical Depth and Precipitable Water to Model Clear Sky Irradiance},
-	Year = {2017}}
+	Volume = {155},
+	Year = {2017},
+	doi = {10.1016/j.solener.2017.07.056}}
 
 @inproceedings{Mikofski2016,
-	Author = {Mark A. Mikofski and Armel Oumbe and Chao Li and Ben Bourne},
-	Booktitle = {43rd IEEE Photovoltaic Specialists Conference},
-	doi = {10.1109/PVSC.2016.7749837},
-	Keywords = {irradiance,module performance,spectral,spectral correction,spectral shift},
-	Publisher = {IEEE},
+	Author = {M. Mikofski and A. Oumbe and C. Li and B. Bourne},
+	Booktitle = {2016 IEEE 43rd Photovoltaic Specialists Conference (PVSC)},
+	Month = {June},
+	Pages = {1357-1362},
 	Title = {Evaluation and correction of the impact of spectral variation of irradiance on PV performance},
 	Year = {2016},
 	doi = {10.1109/PVSC.2016.7749837}}
+
+@inproceedings{Mikofski2017,
+	Author = {Mark A. Mikofski and Clifford W. Hansen and William F. Holmgren and Gregory M. Kimball},
+	Booktitle = {2017 IEEE 44th Photovoltaic Specialists Conference},
+	Title = {Use of Measured Aerosol Optical Depth and Precipitable Water to Model Clear Sky Irradiance},
+	Year = {2017}}
 
 @article{Polo2016,
 	Author = {J. Polo, S. Garcia-Bouhaben, M. C. Alonso-Garcia},
 	Journal = {Journal of Renewable and Sustainable Energy},
 	Title = {A comparative study of the impact of horizontal-to-tilted solar irradiance conversion in modelling small PV array performance},
-	Year = {2016}}
+	Year = {2016},
+	doi = {10.1063/1.4964363}}
 
 @misc{pvlibZenodo,
     author = {pvlib python Contributors},
@@ -86,14 +90,18 @@
 
 @inproceedings{Stein2012,
 	Author = {J. S. Stein},
-	Booktitle = {38th IEEE Photovoltaic Specialists Conference},
-	Publisher = {IEEE},
-	Title = {The Photovoltaic Performance Modeling Collaborative ({PVPMC})},
-	Year = {2012}}
+	Booktitle = {2012 38th IEEE Photovoltaic Specialists Conference},
+	Month = {June},
+	Pages = {003048-003052},
+	Title = {The photovoltaic Performance Modeling Collaborative (PVPMC)},
+	Year = {2012},
+	doi = {10.1109/PVSC.2012.6318225}}
 
 @inproceedings{Stein2016,
-	Author = {Joshua S. Stein and William F. Holmgren and Jessica Forbess and Clifford W. Hansen},
-	Booktitle = {43rd IEEE Photovoltaic Specialists Conference},
-	Publisher = {IEEE},
-	Title = {PVLIB: Open Source Photovoltaic Performance Modeling Functions for Matlab and Python},
-	Year = {2016}}
+    Author = {J. S. Stein and W. F. Holmgren and J. Forbess and C. W. Hansen},
+    Booktitle = {2016 IEEE 43rd Photovoltaic Specialists Conference (PVSC)},
+    Month = {June},
+    Pages = {3425-3430},
+    Title = {PVLIB: Open source photovoltaic performance modeling functions for Matlab and Python},
+    Year = {2016},
+    doi = {10.1109/PVSC.2016.7750303}}
