update joss paper DOIs (#544)
* add joss badge [skip ci]

* add holmgren2017 doi

* add doi [skip ci]

* add mikofski2017

* update pvlib doi [skip ci]

--- a/paper/paper.bib
+++ b/paper/paper.bib
@@ -43,13 +43,15 @@
 	Author = {William F. Holmgren and Antonio T. Lorenzo and Clifford Hansen},
 	Booktitle = {2017 IEEE 44th Photovoltaic Specialists Conference},
 	Title = {A Comparison of PV Power Forecasts Using PVLib-Python},
-	Year = {2017}}
+	Year = {2017},
+	doi = {10.5281/zenodo.1400857}}
 
 @inproceedings{Holmgren2018,
 	Author = {William F. Holmgren and Clifford W. Hansen and Joshua S. Stein and Mark A. Mikofski},
 	Booktitle = {2018 IEEE 45th Photovoltaic Specialists Conference},
 	Title = {Review of open source tools for PV modeling},
-	Year = {2018}}
+	Year = {2018},
+	doi = {10.5281/zenodo.1401378}}
 
 @article{Louwen2017,
 	Author = {Atse Louwen and Ruud E.I. Schropp and Wilfried G.J.H.M. van Sark and Andr{\'e} P.C. Faaij},
@@ -73,7 +75,8 @@
 	Author = {Mark A. Mikofski and Clifford W. Hansen and William F. Holmgren and Gregory M. Kimball},
 	Booktitle = {2017 IEEE 44th Photovoltaic Specialists Conference},
 	Title = {Use of Measured Aerosol Optical Depth and Precipitable Water to Model Clear Sky Irradiance},
-	Year = {2017}}
+	Year = {2017},
+	doi = {10.5281/zenodo.1403238}}
 
 @article{Polo2016,
 	Author = {J. Polo, S. Garcia-Bouhaben, M. C. Alonso-Garcia},
